# chip8-book

./: .gitignore  Makefile  README.md  book.toml
code/chip8_core/: Cargo.toml
code/chip8_core/src/: lib.rs
code/desktop/: Cargo.toml
code/desktop/src/: main.rs
code/wasm/: Cargo.toml
code/wasm/src/: lib.rs
code/web/: index.html  index.js
src/: 1-intro.md  2-basics.md  3-setup.md  4-methods.md  5-instr.md  7-wasm.md  9-changes.md  SUMMARY.md  basics.md  changes.md  frontend.md  instr.md  intro.md  metadata.yaml  methods.md  opcodes.md  setup.md  wasm.md
